chore : build error수정 #119